@@ -32,6 +32,10 @@ action.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.name=Pas
 action.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.tooltip=Paste Graph from an other or the same Session
 action.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.image=pasteGraph.png
 
+action.net.sourceforge.squirrel_sql.plugins.graph.AddTableAtQursorToGraph.image=
+action.net.sourceforge.squirrel_sql.plugins.graph.AddTableAtQursorToGraph.name=Add to Graph
+action.net.sourceforge.squirrel_sql.plugins.graph.AddTableAtQursorToGraph.tooltip=Add table at cursor to Graph
+
 
 #action.net.sourceforge.squirrel_sql.plugins.graph.link.CutGraphAction.name=Cut Graph
 #action.net.sourceforge.squirrel_sql.plugins.graph.link.CutGraphAction.tooltip=Cut Graph to paste to another Session
@@ -65,6 +69,9 @@ menuitem.net.sourceforge.squirrel_sql.plugins.graph.link.CopyGraphAction.mnemoni
 
 menuitem.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.accelerator=
 menuitem.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.mnemonic=
+
+menuitem.net.sourceforge.squirrel_sql.plugins.graph.AddTableAtQursorToGraph.accelerator=
+menuitem.net.sourceforge.squirrel_sql.plugins.graph.AddTableAtQursorToGraph.mnemonic=
 
 #menuitem.net.sourceforge.squirrel_sql.plugins.graph.link.CutGraphAction.accelerator=
 #menuitem.net.sourceforge.squirrel_sql.plugins.graph.link.CutGraphAction.mnemonic=
